@@ -1,3 +1,8 @@
+2018-02-05  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* sim-syscall.c (sim_syscall_multi): Don't update sc->errcode at
+	this point, it should have already been set in cb_syscall.
+
 2017-12-12  Peter Gavin  <pgavin@gmail.com>
 	    Stafford Horne  <shorne@gmail.com>
 
